--- a/public/profile.html
+++ b/public/profile.html
@@ -71,56 +71,59 @@
           </form>
         </div>
         <div class="col-md-10">
+          <h3 id="fullName">Info</h3>        
           <ul id="profile-tabs" class="nav nav-tabs">
             <li class="active"><a href="#info-tab">Info</a></li>
-            <li><a href="#about-tab">About</a></li>
             <li><a href="#profession-tab">Profession</a></li>
             <li><a href="#transactions-tab">Transactions</a></li>
           </ul>
+          <br/>
           <div class="tab-content">
             <div id="info-tab" class="tab-pane active">
-              <h3 id="fullName">Info</h3>
               <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="birthdate">Birthdate</label>
-                    <p id="birthdate" class="form-control-static"></p>
+                <div class="col-md-5">
+                  <div class="form-horizontal">
+                    <div class="form-group">
+                      <label for="birthdate" class="col-md-3 control-label">Birthdate</label>
+                      <div class="col-md-9">
+                        <p id="birthdate" class="form-control-static"></p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="email" class="col-md-3 control-label">Email</label>
+                      <div class="col-md-9">
+                        <p id="email" class="form-control-static"></p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="hometown" class="col-md-3 control-label">Hometown</label>
+                      <div class="col-md-9">
+                        <p id="hometown" class="form-control-static"></p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="location" class="col-md-3 control-label">Location</label>
+                      <div class="col-md-9">
+                        <p id="location" class="form-control-static"></p>
+                      </div>
+                    </div>
                   </div>
                 </div>
+                <div class="col-md-7">
+                  <p><strong>About:</strong> Write something about this person, or write something about yourself.</p>
+                    <textarea class="form-control" id="about" name="about" rows="7" placeholder="About"></textarea>
+                </div>
+              </div>
+              <hr/>
+              <div class="row">
                 <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="email">Email</label>
-                    <p id="email" class="form-control-static"></p>
+                  <h3>Education</h3>
+                  <div id="education">
                   </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="hometown">Hometown</label>
-                    <p id="hometown" class="form-control-static"></p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="location">Location</label>
-                    <p id="location" class="form-control-static"></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div id="about-tab" class="tab-pane">
-              <h3>About</h3>
-              <p>Write something about this person, or write something about yourself.</p>
-              <form method="post">
-                <textarea class="form-control" id="about" name="about" rows="10" placeholder="About"></textarea>
-                <br/>
-                <input type="submit" class="btn btn-primary btn-lg" name="Submit" value="Save" />
-              </form>
             </div>
             <div id="profession-tab" class="tab-pane">
-              <h3>Profession</h3>
-              <hr/>
               <div id="professions">
               </div>
             </div>
