--- a/public/member.html
+++ b/public/member.html
@@ -61,14 +61,7 @@
         <div class="col-md-2">
           <img id="default-image" src="/assets/images/placeholder.png" class="img-thumbnail" style="width:100%" />
           <hr/>
-          <form method="post" action="pay-homecoming.html">
-            <div class="input-group">
-              <span class="input-group-addon">&#8369;</span>
-              <input type="number" name="payment" class="form-control input-lg" value="12500" placeholder="Amount" />
-            </div>
-            <br/>
-            <input type="submit" class="btn btn-success btn-block" value="Pay Homecoming"/>
-          </form>
+          <a href="#payHomecomingModal" class="btn btn-success btn-block" data-target="#payHomecomingModal" data-toggle="modal">Pay Homecoming</a>
         </div>
         <div class="col-md-10">
           <h3 id="fullName">Info</h3>
@@ -150,6 +143,30 @@
         </div>
       </div>
     </div>
+
+    <!-- modal -->
+    <div id="payHomecomingModal" class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <form id="payHomecomingForm" method="post" action="pay-homecoming.html">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title">Pay Homecoming<h4>
+            </div>
+            <div class="modal-body">
+              <div class="input-group">
+                <span class="input-group-addon">&#8369;</span>
+                <input type="number" name="payment" class="form-control input-lg" value="12500" placeholder="Amount" />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-success">Pay Homecoming</button>
+            </div>
+          </div><!-- /.modal-content -->
+        </form>
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->    
   </body>
   <script type="text/javascript" src="/assets/js/scripts.js"></script>
   <script type="text/javascript" src="/assets/js/cookie.js"></script>
