--- a/public/member.html
+++ b/public/member.html
@@ -154,9 +154,20 @@
               <h4 class="modal-title">Pay Homecoming<h4>
             </div>
             <div class="modal-body">
-              <div class="input-group">
-                <span class="input-group-addon">&#8369;</span>
-                <input type="number" name="payment" class="form-control input-lg" value="12500" placeholder="Amount" />
+              <div class="form-group">
+                <label for="paidBy">Paid By</label>
+                <input type="text" name="paidBy" class="form-control" value="" placeholder="Full Name" disabled/>
+              </div>
+              <div class="form-group">
+                <label for="payFor">Pay For</label>
+                <input type="text" name="payFor" class="form-control" value="" placeholder="Full Name" disabled/>
+              </div>
+              <div class="form-group">
+                <label for="payment"></label>
+                <div class="input-group">
+                  <span class="input-group-addon">&#8369;</span>
+                  <input type="number" name="payment" class="form-control input-lg" value="12500" placeholder="Amount" />
+                </div>
               </div>
             </div>
             <div class="modal-footer">
