--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Firebase Hosting</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -83,17 +84,17 @@
     });
   };
 
-  var emailLogin = function() {
-    var email = $('#email').val(),
-        password = $('#password').val();
+  // var emailLogin = function() {
+  //   var email = $('#email').val(),
+  //       password = $('#password').val();
 
-    // console.log(email,password);
-    firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
-      var errorCode = error.code;
-      var errorMessage = error.message;
-      // console.log(errorCode,errorMessage);
-    });
-  };
+  //   // console.log(email,password);
+  //   firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
+  //     var errorCode = error.code;
+  //     var errorMessage = error.message;
+  //     // console.log(errorCode,errorMessage);
+  //   });
+  // };
 
   var checkAuth = function() {
     firebase.auth().onAuthStateChanged(function(user) {
@@ -109,11 +110,11 @@
   $(document).ready(function() {
     'use strict';
 
-    $('#loginForm').submit(function(e) {
-      e.preventDefault();
-      console.log('Email login...');
-      emailLogin();
-    });
+    // $('#loginForm').submit(function(e) {
+    //   e.preventDefault();
+    //   console.log('Email login...');
+    //   emailLogin();
+    // });
 
     $('#facebookLogin').click(function(e) {
       e.preventDefault();
