--- a/public/profile.html
+++ b/public/profile.html
@@ -168,7 +168,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-success">Pay Homecoming</button>
+              <input type="submit" name="submit" class="btn btn-success" value="Pay Homecoming" />
             </div>
           </div><!-- /.modal-content -->
         </form>
