--- a/public/accounts.html
+++ b/public/accounts.html
@@ -33,20 +33,20 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="dashboard.html">SJI Batch '98</a>
+          <a class="navbar-brand" href="/dashboard.html">SJI Batch '98</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="roster.html">Roster <span class="sr-only">(current)</span></a></li>
-            <li class="active"><a href="accounts.html">Accounts</a></li>
+            <li><a href="/members.html">Members <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="/accounts.html">Accounts</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" id="username" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="profile.html">Profile</a></li>
+                <li><a href="/profile.html">Profile</a></li>
                 <li><a href="#facebook-profile" id="facebook-profile" target="_blank">Facebook Profile</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#logout" id="signOut">Logout</a></li>
@@ -82,7 +82,7 @@
 
     $('#signOut').click(function(e) {
       e.preventDefault();
-      signOut();
+      user.signOut();
     });
 
     checkAuth();
