--- a/public/member/index.html
+++ b/public/member/index.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SJI '98 | Profile</title>
+    <title>SJI '98 | Member</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script>
       // Initialize Firebase
-      // TODO: Replace with your project's customized code snippet
+      // Replace with your project's customized code snippet
       var config = {
         apiKey: "AIzaSyC-H_ws7WPkLU9ax6Ge7SKFgh1pil4vCD8",
         authDomain: "sji.asteriainteractive.com",
@@ -47,7 +46,7 @@
             <li class="dropdown">
               <a href="#" id="username" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li class="active"><a href="/profile.html">Profile</a></li>
+                <li><a href="/profile.html">Profile</a></li>
                 <li><a href="#facebook-profile" id="facebook-profile" target="_blank">Facebook Profile</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#logout" id="signOut">Logout</a></li>
@@ -59,17 +58,13 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <div class="row">
-            <div class="col-md-1 col-sm-2">
-              <img id="default-image" src="/assets/images/placeholder.png" class="img-thumbnail" style="width:100%" />
-            </div>
-            <div class="col-md-11 col-sm-10">
-              <h3 id="fullName" style="padding:0;margin:0 0 5px 0;">Info</h3>
-              <a href="#payHomecomingModal" class="btn btn-success" data-target="#payHomecomingModal" data-toggle="modal">Pay Homecoming</a>
-            </div>
-          </div>
-          <br/>
+        <div class="col-md-2">
+          <img id="default-image" src="/assets/images/placeholder.png" class="img-thumbnail" style="width:100%" />
+          <hr/>
+          <a href="#payHomecomingModal" class="btn btn-success btn-block" data-target="#payHomecomingModal" data-toggle="modal">Pay Homecoming</a>
+        </div>
+        <div class="col-md-10">
+          <h3 id="fullName">Info</h3>
           <ul id="profile-tabs" class="nav nav-tabs">
             <li class="active"><a href="#info-tab">Info</a></li>
             <li><a href="#profession-tab">Profession</a></li>
@@ -143,7 +138,7 @@
                   </tbody>
                 </table>
               </div>
-            </div>            
+            </div>
           </div>
         </div>
       </div>
@@ -161,30 +156,28 @@
             <div class="modal-body">
               <div class="form-group">
                 <label for="paidBy">Paid By</label>
-                <input type="text" id="paidBy" name="paidBy" class="form-control input-lg" value="12500" placeholder="Amount" disabled />
+                <input type="text" name="paidBy" class="form-control" value="" placeholder="Full Name" disabled/>
               </div>
               <div class="form-group">
-                <label for="paidBy">Paid For</label>
-                <input type="text" id="paidFor" name="paidFor" class="form-control input-lg" value="12500" placeholder="Amount" disabled />
+                <label for="payFor">Pay For</label>
+                <input type="text" name="payFor" class="form-control" value="" placeholder="Full Name" disabled/>
               </div>
               <div class="form-group">
-                <label for="payment">Amount</label>
+                <label for="payment"></label>
                 <div class="input-group">
                   <span class="input-group-addon">&#8369;</span>
-                  <input type="number" id="payment" name="payment" class="form-control input-lg" value="12500" placeholder="Amount" />
+                  <input type="number" name="payment" class="form-control input-lg" value="12500" placeholder="Amount" />
                 </div>
               </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <input type="submit" name="submit" class="btn btn-success" value="Pay Homecoming" />
+              <button type="button" class="btn btn-success">Pay Homecoming</button>
             </div>
           </div><!-- /.modal-content -->
         </form>
       </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-
+    </div><!-- /.modal -->    
   </body>
   <script type="text/javascript" src="/assets/js/cookie.js"></script>
   <script type="text/javascript" src="/assets/js/scripts.js"></script>
@@ -200,22 +193,6 @@
     $('#signOut').click(function(e) {
       e.preventDefault();
       user.signOut();
-    });
-
-    $('#payHomecomingForm').submit(function(e) {
-      e.preventDefault();
-      var paidBy = $('#paidBy').val(),
-        paidFor = $('#paidFor').val(),
-        payment = $('#payment').val();
-
-      firebase.database().ref('payments/' + userId).set({
-        date: new Date().toDateString(),
-        paidBy: paidBy,
-        paidFor: paidFor
-      });
-
-      console.log(paidBy,paidFor,payment);
-      console.log('submitting modal');
     });
 
     checkAuth();
