--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Firebase Hosting</title>
+    <title>SJI Batch 98 | Login</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/libs/jquery-load-template/dist/jquery-loadTemplate.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
     <script>
-      // Initialize Firebase
       var config = {
         apiKey: "AIzaSyC-H_ws7WPkLU9ax6Ge7SKFgh1pil4vCD8",
         authDomain: "sji.asteriainteractive.com",
@@ -20,79 +19,115 @@
       };
       firebase.initializeApp(config);
     </script>
-    <style media="screen">
-    </style>
   </head>
   <body>
-    <div class="container-fluid">
-      <div style="margin-top:50px;" class="row">
-        <div class="col-md-offset-4 col-md-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h2 class="panel-title">SJI Batch '98 Login</h2>
-            </div>
-            <div class="panel-body">
-              <div id="status-message" style="display:none;">
-              </div>
-              <div style="text-align:center;">
-                <img src="/assets/images/sji-logo.jpg" class="img-thumbnail"/>
-                <hr/>
-                <a href="#facebook" id="facebookLogin" class="btn btn-primary btn-lg">Facebook Login</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </body>
   <script type="text/javascript" src="/assets/js/cookie.js"></script>
-  <script type="text/javascript">
-  var provider = new firebase.auth.FacebookAuthProvider();
-  provider.addScope('public_profile,user_photos,user_birthday,email,user_education_history,user_work_history,user_about_me,user_hometown,user_location');
+  <script>
+  var renderTemplate = function(type,templateName,data={}) {
+    var templateHtml = templateName+'.html';
+    fetch('templates/'+templateHtml).then(function(response){
+      var template = response.text().then(function(template) {
+        // console.log(data);
+        var rendered = Mustache.render(template,data);
 
-  var facebookLogin = function() {
-    firebase.auth().signInWithPopup(provider).then(function(result) {
-      // This gives you a Facebook Access Token. You can use it to access the Facebook API.
-      var token = result.credential.accessToken;
-      setCookie('token',token);
-      console.log('Successfully logged in with Facebook.');
-    }).catch(function(error) {
-      var errorCode = error.code;
-      var errorMessage = error.message;
-      var email = error.email;
-      var credential = error.credential;
-      console.log('Error: ',errorCode,errorMessage);
-      var statusMessage = "<div class='alert alert-error'>";
-      statusMessage+= 'button type="button" class="close" data-dismiss="alert" aria-label="Close">';
-      statusMessage+= '<span aria-hidden="true">&times;</span>';
-      statusMessage+= '</button>';
-      statusMessage+= '"Error: '+ ' ' + errorCode+ ' ' + errorMessage;
-      statusMessage+= '</div>';
-      $('#status-message').html(statusMessage);
-    });
-  };
+        if (type=='page') {
+          document.querySelector('body').innerHTML = rendered;
+        } else if (type=='status') {
+          document.getElementById('status-message').innerHTML = rendered;
+        }
 
-  var checkAuth = function() {
-    firebase.auth().onAuthStateChanged(function(user) {
-      var token = getCookie('token');
-      if (user && token) { // User is signed in.
-        window.location.href='/profile.html';
-      } else { // No user is signed in.
-        console.log('No user signed in.');
-      }
-    });
-  };
-
-  $(document).ready(function() {
-    'use strict';
-
-    $('#facebookLogin').click(function(e) {
-      e.preventDefault();
-      facebookLogin();
+        history.pushState(null,null,templateName);
+      });
+    }).catch(function(response) {
+      console.log(response);
     });
 
-    checkAuth();
-  });
+    // $.get(templateHtml, function(template) {
+    //   var rendered = Mustache.render(template,data);
+    //   if (type=='page') {
+    //     $('body').html(rendered);
+    //   } else if (type=='status') {
+    //     $('#status-message').html(rendered);
+    //   }
+    //   history.pushState(null,null,templateName);
+    // });
+  }
   </script>
+  <!--<script src="/assets/js/scripts.js"></script>-->
+  <script type="text/javascript">
+  (function() {
+    'use strict';
+    var app = {
+      router: function(path) {
+        var isProfilePage = /^(\/profile){1}(\/|\.html){1}$/.test(path),
+          isMemberPage = /^(\/member){1}(\/){1}[A-Za-z0-9_-]+$/.test(path),
+          isMembersPage = /^(\/members){1}(\/|\.html){1}$/.test(path),
+          isAccountsPage = /^(\/accounts){1}(\/|\.html){1}$/.test(path);
+
+        if (isProfilePage) {
+          renderTemplate('page','profile');
+          console.log('Profile Page');
+          // page.profile();
+        } else if (isAccountsPage) {
+          renderTemplate('page','accounts');
+          console.log('Accounts Page');
+          // page.accounts();
+        } else if (isMembersPage) {
+          renderTemplate('page','members');
+          console.log('Members Page');
+          // page.roster();
+        } else if (isMemberPage) {
+          renderTemplate('page','member');
+          console.log('Member Page');
+          // page.members();
+        }        
+      },
+      user: {
+        model: null,
+        controller: {
+          login: function() {
+            var facebookProvider = new firebase.auth.FacebookAuthProvider();
+            facebookProvider.addScope('public_profile,user_photos,user_birthday,email,user_education_history,user_work_history,user_about_me,user_hometown,user_location');
+            firebase.auth().signInWithPopup(facebookProvider).then(function(result) {
+              // This gives you a Facebook Access Token. You can use it to access the Facebook API.
+              var token = result.credential.accessToken;
+              var user = result.user;
+              console.log('Successfully logged in with Facebook.');
+            }).catch(function(error) {
+              console.log(firebase);
+              console.log('Error: ',error);
+              renderTemplate('status','status-message',{error:error});
+            });
+          },
+          isLoggedIn: function() {
+            console.log('Check if user is logged in.')
+            firebase.auth().onAuthStateChanged(function(user) {
+              if (user) { // User is signed in.
+                var user = JSON.parse(JSON.stringify(user)),
+                  accessToken = user.stsTokenManager.accessToken;
+
+                renderTemplate('page','profile');
+              } else { // No user is signed in.
+                renderTemplate('page','login');
+                console.log('No user signed in.');
+              }
+            });
+          }
+        }
+      }
+    };
+
+    console.log(firebase.app().name);
+    app.user.controller.isLoggedIn();
+
+    $(document).on('click','#facebookLogin',function(e) {
+      e.preventDefault();
+      app.user.controller.login();
+    });
+
+  })();
+  </script>
+
 
 </html>
