--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
     <!-- Angular Material Library -->
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
     <script>
     'use strict';
     angular.module('sji98',[
@@ -41,7 +42,7 @@
       ]);
 
     angular.module('sji98').run(function (){
-      console.log("Running the 'starter-app-bootstrap' module for ES6 Material-Start Tutorial");
+      console.log("Running 'sji98' module");
     });
 
     angular.module('sji98')
