--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,8 @@
     'use strict';
     angular.module('sji98',[
         'ngRoute',
-        'ngMaterial'
+        'ngMaterial',
+        'FirebaseUser'
       ]);
 
     angular.module('sji98').run(function (){
@@ -60,6 +61,7 @@
               templateUrl: 'templates/members.html'
             })
             .when('/members/add',{
+              controller: 'UserAdd',
               templateUrl: 'templates/members-add.html'
             })
             .when('/accounts',{
@@ -68,7 +70,16 @@
             .otherwise('/404',{
               templateUrl: 'templates/404.html'
             });
-        });
+      });
+
+    angular.module('FirebaseUser',[
+        'ngResource',
+        'firebase'
+      ])
+      .controller('UserAdd',function($scope,$resource,$firebaseArray) {
+        $scope.submit = function() {
+        };
+      });
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.3/angular-material.min.css" />
     <base href="/">
